--- a/Web_Lab1/wwwroot/index.html
+++ b/Web_Lab1/wwwroot/index.html
@@ -9,7 +9,6 @@
 <body>
     <h1>Dog Shelter Management</h1>
 
-    <!-- Кнопка для завантаження списку собак -->
     <h3>Dog List</h3>
     <button onclick="displayDogs()">Show Dogs</button>
     <div id="dog-list"></div>
@@ -19,20 +18,92 @@
     <button onclick="displayDogById()">Show Dog</button>
     <div id="dog-by-id"></div>
 
-    <!-- Форма для пошуку собаки за іменем і породою -->
     <h3>Dog by Name and Breed</h3>
-    <input type="text" id="dog-name" placeholder="Enter Dog Name" required>
-    <input type="text" id="dog-breed" placeholder="Enter Dog Breed" required>
+    <input type="text" id="dog-name-search" placeholder="Enter Dog Name" required>
+    <input type="text" id="dog-breed-search" placeholder="Enter Dog Breed" required>
     <button onclick="displayDogByNameAndBreed()">Show Dog</button>
-    <div id="dog-by-name-and-breed"></div>
 
-    <h3>Dog List</h3>
-    <button onclick="displayDogs()">Show Dogs</button>
-    <div id="dog-list"></div>
+    <h3>Add Dog</h3>
+    <form id="add-dog-form" onsubmit="addDog(event)">
+        <label for="dog-name">Name:</label>
+        <input type="text" id="dog-name" placeholder="Enter Dog Name" required><br>
+
+        <label for="dog-breed">Breed:</label>
+        <input type="text" id="dog-breed" placeholder="Enter Dog Breed" required><br>
+
+        <label for="dog-age">Age:</label>
+        <input type="number" id="dog-age" placeholder="Enter Dog Age" required min="0"><br>
+
+        <label for="dog-weight">Weight:</label>
+        <input type="number" id="dog-weight" placeholder="Enter Dog Weight" step="0.5" required><br>
+
+        <label for="dog-isAvailableForAdoption">Available for Adoption:</label>
+        <input type="checkbox" id="dog-isAvailableForAdoption"><br>
+
+        <label for="dog-shelterId">Shelter ID:</label>
+        <input type="number" id="dog-shelterId"><br>
+
+        <input type="submit" value="Add Dog">
+    </form>
+
+    <h3>Delete Dog</h3>
+    <input type="number" id="delete-dog-id" placeholder="Enter Dog ID">
+    <button onclick="deleteDog()">Delete Dog</button>
+    <p id="delete-dog-response"></p>
+
+    <h3>Update Dog</h3>
+    <form id="update-dog-form" onsubmit="updateDog(event)">
+        <input type="number" id="update-dog-id" placeholder="Enter Dog ID" required>
+        <input type="text" id="update-dog-name" placeholder="Enter New Name" required>
+        <input type="text" id="update-dog-breed" placeholder="Enter New Breed" required>
+        <input type="number" id="update-dog-age" placeholder="Enter New Age" required>
+        <input type="number" id="update-dog-weight" placeholder="Enter New Weight" step="0.5" required>
+        <input type="checkbox" id="update-dog-available"> Available for Adoption
+        <input type="number" id="update-dog-shelterId" placeholder="Enter Shelter ID">
+        <button type="submit">Update Dog</button>
+    </form>
 
     <h3>Shelter List</h3>
     <button onclick="displayShelters()">Show Shelters</button>
     <div id="shelter-list"></div>
+
+    <h3>Shelter by ID</h3>
+    <input type="number" id="shelter-id" placeholder="Enter Shelter ID" required>
+    <button onclick="displayShelterById()">Show Shelter</button>
+    <div id="shelter-by-id"></div>
+
+    <h3>Shelter by Name and Address</h3>
+    <input type="text" id="shelter-name-search" placeholder="Enter Shelter Name" required>
+    <input type="text" id="shelter-address-search" placeholder="Enter Shelter Address" required>
+    <button onclick="displayShelterByNameAndAddress()">Show Shelter</button>
+    <div id="shelter-by-name-and-address"></div>
+
+    <h3>Add Dog Shelter</h3>
+    <form id="add-shelter-form" onsubmit="addShelter(event)">
+        <label for="shelter-name">Name:</label>
+        <input type="text" id="shelter-name" placeholder="Enter Shelter Name" required><br>
+
+        <label for="shelter-address">Address:</label>
+        <input type="text" id="shelter-address" placeholder="Enter Shelter Address" required><br>
+
+        <label for="shelter-contact">Contact Number:</label>
+        <input type="text" id="shelter-contact" placeholder="Enter Contact Number" required><br>
+
+        <input type="submit" value="Add Shelter">
+    </form>
+
+    <h3>Delete Dog Shelter</h3>
+    <input type="number" id="delete-shelter-id" placeholder="Enter Shelter ID">
+    <button onclick="deleteShelter()">Delete Shelter</button>
+
+    <h3>Update Dog Shelter</h3>
+    <form id="update-shelter-form" onsubmit="updateShelter(event)">
+        <input type="number" id="update-shelter-id" placeholder="Enter Shelter ID" required>
+        <input type="text" id="update-shelter-name" placeholder="Enter New Name" required>
+        <input type="text" id="update-shelter-address" placeholder="Enter New Address" required>
+        <input type="text" id="update-shelter-contact" placeholder="Enter New Contact Number" required>
+        <button type="submit">Update Shelter</button>
+    </form>
 
     <h3>City List</h3>
     <button onclick="displayCities()">Show Cities</button>
@@ -41,14 +112,6 @@
     <h3>Options List</h3>
     <button onclick="displayOptions()">Show Options</button>
     <div id="option-list"></div>
-
-    <!-- Форма для додавання собаки -->
-    <h3>Add Dog</h3>
-    <form action="javascript:void(0);" method="POST" onsubmit="addDog()">
-        <input type="text" id="dog-name" placeholder="Dog Name" required>
-        <input type="text" id="dog-breed" placeholder="Breed" required>
-        <input type="submit" value="Add">
-    </form>
 
     <script src="js/dog.js"></script>
     <script src="js/shelter.js"></script>
